# QtAdditions

./: .gitignore  CMakeLists.txt  Create-Solution.cmd  How-to-build.txt  README.md
examples/ExampleListHeaderWidget/: CMakeLists.txt  Main.cpp  README.md
examples/ExampleTableWithCombo/: CMakeLists.txt  Main.cpp  README.md
examples/ExampleWidgetList/: CMakeLists.txt  README.md
include/dak/QtAdditions/: QHeaderViewWithWidgets.h  QTableWidgetWithComboBox.h  QtUtilities.h
src/: QHeaderViewWithWidgets.cpp  QTableWidgetWithComboBox.cpp  QtUtilities.cpp
